hw-07-events/k8s/billing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
  namespace: hw07
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-service
  template:
    metadata:
      labels:
        app: billing-service
    spec:
      containers:
      - name: billing-service
        image: tobantal/hw07-billing:latest
        ports:
        - containerPort: 8001
        readinessProbe:
          httpGet:
            path: /health
            port: 8001
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 8001
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: hw07
spec:
  selector:
    app: billing-service
  ports:
  - port: 8001
    targetPort: 8001
