hw-07-events/k8s/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: hw07
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: tobantal/hw07-order:latest
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: hw07
spec:
  selector:
    app: order-service
  ports:
  - port: 8000
    targetPort: 8000
